@startuml Library Management System

' Styling
!define TABLE_BORDER_COLOR #073B4C
!define PRIMARY_KEY_COLOR #06D6A0
!define FOREIGN_KEY_COLOR #EF476F
!define ATTRIBUTE_COLOR #118AB2
skinparam linetype ortho

' Original Entities
entity "patrons" {
  +patron_id: SERIAL <<PK>>
  --
  first_name: VARCHAR(50)
  last_name: VARCHAR(50)
  email: VARCHAR(100)
  phone: VARCHAR(20)
  membership_date: DATE
  status: VARCHAR(20)
  birth_date: DATE
}

entity "books" {
  +book_id: SERIAL <<PK>>
  --
  isbn: VARCHAR(13)
  title: VARCHAR(200)
  author: VARCHAR(100)
  publisher: VARCHAR(100)
  publication_year: INTEGER
  category: VARCHAR(50)
  total_copies: INTEGER
  available_copies: INTEGER
  location_code: VARCHAR(20)
}

entity "loans" {
  +loan_id: SERIAL <<PK>>
  --
  patron_id: INTEGER <<FK>>
  book_id: INTEGER <<FK>>
  loan_date: DATE
  due_date: DATE
  return_date: DATE
  status: VARCHAR(20)
  extensions_count: INTEGER
}

entity "reservations" {
  +reservation_id: SERIAL <<PK>>
  --
  patron_id: INTEGER <<FK>>
  book_id: INTEGER <<FK>>
  reservation_date: TIMESTAMP
  expiration_date: TIMESTAMP
  status: VARCHAR(20)
  notification_sent: BOOLEAN
}

entity "fines" {
  +fine_id: SERIAL <<PK>>
  --
  patron_id: INTEGER <<FK>>
  loan_id: INTEGER <<FK>>
  amount: DECIMAL(10,2)
  issue_date: DATE
  due_date: DATE
  payment_date: DATE
  status: VARCHAR(20)
}

entity "library_events" {
  +event_id: SERIAL <<PK>>
  --
  title: VARCHAR(100)
  description: TEXT
  event_date: TIMESTAMP
  duration_minutes: INTEGER
  max_participants: INTEGER
  current_participants: INTEGER
  status: VARCHAR(20)
}

entity "event_registrations" {
  +registration_id: SERIAL <<PK>>
  --
  event_id: INTEGER <<FK>>
  patron_id: INTEGER <<FK>>
  registration_date: TIMESTAMP
  attendance_status: VARCHAR(20)
}

entity "book_reviews" {
  +review_id: SERIAL <<PK>>
  --
  book_id: INTEGER <<FK>>
  patron_id: INTEGER <<FK>>
  rating: INTEGER
  review_text: TEXT
  review_date: TIMESTAMP
  status: VARCHAR(20)
}

entity "staff" {
  +staff_id: SERIAL <<PK>>
  --
  first_name: VARCHAR(50)
  last_name: VARCHAR(50)
  email: VARCHAR(100)
  role: VARCHAR(50)
  hire_date: DATE
  status: VARCHAR(20)
  supervisor_id: INTEGER <<FK>>
}

entity "audit_log" {
  +log_id: SERIAL <<PK>>
  --
  table_name: VARCHAR(50)
  record_id: INTEGER
  action_type: VARCHAR(20)
  action_timestamp: TIMESTAMP
  staff_id: INTEGER <<FK>>
  old_values: JSONB
  new_values: JSONB
}

' New Entities
entity "book_categories" {
  +category_id: SERIAL <<PK>>
  --
  parent_category_id: INTEGER <<FK>>
  name: VARCHAR(100)
  description: TEXT
  depth_level: INTEGER
  full_path: VARCHAR(500)
  is_active: BOOLEAN
  created_at: TIMESTAMP
}

entity "book_collections" {
  +collection_id: SERIAL <<PK>>
  --
  name: VARCHAR(200)
  publisher: VARCHAR(100)
  series_order: INTEGER
  total_volumes: INTEGER
  start_year: INTEGER
  end_year: INTEGER
  status: VARCHAR(50)
  description: TEXT
  created_at: TIMESTAMP
}

entity "book_collection_items" {
  +collection_item_id: SERIAL <<PK>>
  --
  book_id: INTEGER <<FK>>
  collection_id: INTEGER <<FK>>
  volume_number: INTEGER
  sequence_number: INTEGER
  is_special_edition: BOOLEAN
  notes: TEXT
}

entity "library_branches" {
  +branch_id: SERIAL <<PK>>
  --
  name: VARCHAR(100)
  address: TEXT
  phone: VARCHAR(20)
  email: VARCHAR(100)
  manager_id: INTEGER <<FK>>
  opening_hours: JSONB
  facilities: JSONB
  status: VARCHAR(50)
  created_at: TIMESTAMP
}

entity "branch_inventory" {
  +inventory_id: SERIAL <<PK>>
  --
  branch_id: INTEGER <<FK>>
  book_id: INTEGER <<FK>>
  total_copies: INTEGER
  available_copies: INTEGER
  lost_copies: INTEGER
  damaged_copies: INTEGER
  last_inventory_date: TIMESTAMP
  shelf_location: VARCHAR(50)
  status: VARCHAR(50)
}

entity "membership_plans" {
  +plan_id: SERIAL <<PK>>
  --
  name: VARCHAR(100)
  duration_months: INTEGER
  max_loans: INTEGER
  max_reservations: INTEGER
  loan_duration_days: INTEGER
  reservation_duration_days: INTEGER
  fine_rate: DECIMAL(5,2)
  price: DECIMAL(10,2)
  benefits: JSONB
  status: VARCHAR(50)
  created_at: TIMESTAMP
}

entity "patron_memberships" {
  +membership_id: SERIAL <<PK>>
  --
  patron_id: INTEGER <<FK>>
  plan_id: INTEGER <<FK>>
  start_date: DATE
  end_date: DATE
  payment_status: VARCHAR(50)
  payment_method: VARCHAR(50)
  payment_reference: VARCHAR(100)
  auto_renewal: BOOLEAN
  status: VARCHAR(50)
  created_at: TIMESTAMP
}

entity "interlibrary_loans" {
  +ill_id: SERIAL <<PK>>
  --
  requesting_branch_id: INTEGER <<FK>>
  providing_institution: VARCHAR(200)
  book_title: VARCHAR(200)
  isbn: VARCHAR(13)
  patron_id: INTEGER <<FK>>
  request_date: TIMESTAMP
  expected_arrival_date: DATE
  actual_arrival_date: DATE
  return_due_date: DATE
  actual_return_date: DATE
  cost: DECIMAL(10,2)
  status: VARCHAR(50)
  notes: TEXT
  created_at: TIMESTAMP
}

entity "library_programs" {
  +program_id: SERIAL <<PK>>
  --
  branch_id: INTEGER <<FK>>
  name: VARCHAR(200)
  description: TEXT
  program_type: VARCHAR(50)
  start_date: DATE
  end_date: DATE
  session_schedule: JSONB
  max_participants: INTEGER
  min_age: INTEGER
  max_age: INTEGER
  registration_deadline: DATE
  instructor_id: INTEGER <<FK>>
  materials_provided: JSONB
  cost: DECIMAL(10,2)
  status: VARCHAR(50)
  created_at: TIMESTAMP
}

entity "program_registrations" {
  +registration_id: SERIAL <<PK>>
  --
  program_id: INTEGER <<FK>>
  patron_id: INTEGER <<FK>>
  registration_date: TIMESTAMP
  payment_status: VARCHAR(50)
  attendance_log: JSONB
  completion_status: VARCHAR(50)
  feedback_rating: INTEGER
  feedback_text: TEXT
  created_at: TIMESTAMP
}

' Relationships
patrons ||--o{ loans : has
patrons ||--o{ reservations : makes
patrons ||--o{ fines : receives
patrons ||--o{ event_registrations : participates
patrons ||--o{ book_reviews : writes
patrons ||--o{ patron_memberships : subscribes
patrons ||--o{ interlibrary_loans : requests
patrons ||--o{ program_registrations : enrolls

books ||--o{ loans : involved_in
books ||--o{ reservations : has
books ||--o{ book_reviews : receives
books ||--o{ book_collection_items : belongs_to
books ||--o{ branch_inventory : stocked_in

loans ||--o{ fines : generates

library_events ||--o{ event_registrations : has

staff ||--o{ staff : supervises
staff ||--o{ audit_log : performs
staff ||--o{ library_branches : manages
staff ||--o{ library_programs : instructs

book_categories ||--o{ book_categories : has_parent
book_collections ||--o{ book_collection_items : contains

library_branches ||--o{ branch_inventory : maintains
library_branches ||--o{ library_programs : hosts
library_branches ||--o{ interlibrary_loans : requests

membership_plans ||--o{ patron_memberships : offers

library_programs ||--o{ program_registrations : has

@enduml
